@@ -471,5 +471,5 @@ jpellerin+nose@gmail.com
 .SH COPYRIGHT
 LGPL
 
-.\" Generated by docutils manpage writer on 2011-05-27 09:59.
+.\" Generated by docutils manpage writer on 2011-06-17 13:43.
 .\" 
